--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
-<h1>Hello world!</h1>
+<h1>Hello Git world!</h1>
 <h2>Hello Git</h2>
+<h2>Welcome</h2>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works</p>
 
