--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>Welcome</h2>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works</p>
-  <h1>This is a added line</h1>
+  <h1>This is a added line to this</h1>
 
 </body>
 </html>
